# notes

./: c++-misc.md  color-management.md  ffmpeg-notes.md  gaming.md  linux-misc.md  software-engineering.md  vscode-configuration.md  win10-survival-guide.md
elf-interposition/: CMakeLists.txt  README.md
elf-interposition/CommonFile/: XxxxPlayerLog.cpp  XxxxPlayerLog.h
elf-interposition/XxxxAudioCaptureCore/: AudioCaptureExport.cpp  AudioCaptureExport.h  framework.h
elf-interposition/XxxxPlayer/: Common.cpp  Common.h  IXxxxPlayer.h  XxxxAudioCapturePlayerExport.cpp  XxxxAudioCapturePlayerExport.h  XxxxPlayer.h  XxxxPlayerDefine.h  XxxxPlayerExport.cpp  dllmain.cpp
elf-interposition/XxxxPlayerDemo/: Log.cpp  Log.h  main.cpp
gdi-stretchblt-artifacts/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
hidden-desktop-viewer/: CMakeLists.txt  README.md
hidden-desktop-viewer/src/: capture_manager.cpp  capture_manager.h  desktop_manager.cpp  desktop_manager.h  main.cpp
libreoffice/: libreoffice-avmedia.md
libreoffice/windows-patches/: readme.txt
libreoffice/windows-patches/cli_ure/source/native/: native_bootstrap.cxx.diff
libreoffice/windows-patches/cppuhelper/source/: bootstrap.cxx.diff  findsofficepath.c.diff
libreoffice/windows-patches/filter/source/config/cache/: typedetection.cxx.diff
libreoffice/windows-patches/include/cppuhelper/: bootstrap.hxx.diff
libreoffice/windows-patches/sd/source/console/: PresenterScreen.cxx.diff
linux/: linux-misc.md
triangles/: CMakeLists.txt  README.md
triangles/linux/: CMakeLists.txt  wayland_egl_gl.cpp  wayland_egl_gles.cpp  wayland_vulkan.cpp  x11_egl_gl.cpp  x11_egl_gles.cpp  x11_glx_gl.cpp
triangles/linux/wayland_vulkan_shaders/: triangle.frag  triangle.vert
triangles/windows/: CMakeLists.txt  win32_d3d12.cpp
