cmake_minimum_required(VERSION 3.24)
project(HelloTriangles LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    add_subdirectory(linux)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    add_subdirectory(windows)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    message(STATUS "macOS targets not yet implemented")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Android")
    message(STATUS "Android targets not yet implemented")
elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    message(STATUS "iOS targets not yet implemented")
endif()
